--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://root:root@saasmanagemnet.w5rw1.mongodb.net/mydatabase?retryWrites=true&w=majority
+      uri: mongodb+srv://root:root@saasmanagemnet.w5rw1.mongodb.net/mydatabase?retryWrites=true&w=majority&ssl=true
   application:
     name: saasmanagemnet
 
