updated pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
+<dependency>
+    <groupId>com.vinay</groupId>
+    <artifactId>email-quue</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+</dependency>
 
 
 		<dependency>
